tests/NormalTests/paczka1/fuzzy1/71970726.err
Error in line 6: aAO4um S113 70,24
Error in line 11: tNaWJgFuE S521 -1,7
Error in line 2: tNaWJgFuE S521 13,4
Error in line 1: aAO4um S820 19,3
Error in line 29: xdNBK S820 109,9
Error in line 30: tNaWJgFuE S390 76,5
Error in line 21: aAO4um S113 83,9
Error in line 32: UzaQTNO S113 70,9
Error in line 34: tNaWJgFuE S521 46,9
